--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Inwentaryzatoramw</title>
+    <title>Inwentaryzator AMW</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
